# pyVrp

./: .gitignore  helpers.py  initial_solutions.py  instance_reader.py  old.py  readme.md  requirements.txt  vrp.py
instances/: toy.txt  toy_temp.csv
instances/Homberger/: C1_10_1.txt  C1_10_10.txt  C1_10_4.txt  C1_10_8.txt  C1_4_1.txt  C1_4_2.txt  C1_4_3.txt  C1_4_4.txt  C1_4_6.txt  C1_4_9.txt  C1_6_2.txt  C1_6_3.txt  C1_6_6.txt  C1_6_7.txt  C1_6_9.txt  C1_8_2.txt  C1_8_3.txt  C1_8_6.txt  C1_8_7.txt  C1_8_8.txt  C2_10_1.txt  C2_10_4.txt  C2_10_5.txt  C2_10_9.txt  C2_4_1.txt  C2_4_3.txt  C2_4_4.txt  C2_4_5.txt  C2_4_8.txt  C2_4_9.txt  C2_6_1.txt  C2_6_10.txt  (+78 more)
instances/VRPTWController-master/VRPTWController-master/: .gitignore  CMakeLists.txt  DummySolver.cpp  README.md  genScript1.sh  genScript2.sh  genScript3.sh
instances/VRPTWController-master/VRPTWController-master/Instances/Homberger/: C1_10_2.txt  C1_10_3.txt  C1_10_5.txt  C1_10_6.txt  C1_10_7.txt  C1_10_9.txt  C1_4_10.txt  C1_4_5.txt  C1_4_7.txt  C1_4_8.txt  C1_6_1.txt  C1_6_10.txt  C1_6_4.txt  C1_6_5.txt  C1_6_8.txt  C1_8_1.txt  C1_8_10.txt  C1_8_4.txt  C1_8_5.txt  C1_8_9.txt  C2_10_10.txt  C2_10_2.txt  C2_10_3.txt  C2_10_6.txt  C2_10_7.txt  C2_10_8.txt  C2_4_10.txt  C2_4_2.txt  C2_4_6.txt  C2_4_7.txt  C2_6_3.txt  C2_6_5.txt  C2_6_7.txt  C2_6_8.txt  C2_6_9.txt  C2_8_4.txt  C2_8_5.txt  C2_8_6.txt  C2_8_9.txt  R1_10_1.txt  (+89 more)
instances/VRPTWController-master/VRPTWController-master/src/: CMakeLists.txt  Controller.cpp  Controller.h  Data.cpp  Data.h  Instance.cpp  Instance.h  dSolution.cpp  dSolution.h  main.cpp
(+2 files in other folders)
